--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.5.2",
     "react-modal": "^3.6.1",
     "react-scripts": "2.0.5",
+    "react-youtube": "^7.8.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
